# videoTranscript

./: .env.example  .gitignore  audioTranscripter.py  kotoba-whisper-test.py  multiAudioTranscripter.py  package.json  pyproject.toml  videoTranscripter.py
